# influencer_impower_interview

./: .gitignore  DATABASE_SCHEMA.md  GRAPHQL_SCHEMA_GUIDE.md  MONITORING_IMPLEMENTATION_SUMMARY.md  OVERVIEW.md  POC2_IMPLEMENTATION_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  README.md  UI.md  docker-compose.production.yml  docker-compose.yml  kol_rates.sessions.sql  mock_kols.py  package.json  rate_cards.sessions.sql  seed_kols.csv  seed_kols2.csv
.github/workflows/: ci-cd.yml  test-algorithms.yml
api/: .dockerignore  Dockerfile  backfill.py  main.py  models.py  requirements.txt  routes_crm.py  routes_kols.py  routes_match.py  routes_media.py  routes_plan.py
api/services/: clip_embed.py
api/sql/: kol_data.session.sql  kol_dms.sessions.sql  kol_media.session.sql
apps/api/: .coveragerc  .env.example  ARCHITECTURE.md  Dockerfile  README.md  TESTING.md  alembic.ini  docker-compose.yml  init-db.sql  pyproject.toml  pytest.ini
apps/api/migrations/: env.py
apps/api/src/kol_api/: __about__.py  __init__.py  config.py  main.py
apps/api/src/kol_api/database/: connection.py
apps/api/src/kol_api/database/models/: __init__.py  auth.py  base.py  budget.py  campaign.py  kol.py  scoring.py
apps/api/src/kol_api/graphql/: __init__.py  schema.py  security.py  types.py
apps/api/src/kol_api/graphql/resolvers/: __init__.py  base.py  budget_resolvers.py  campaign_resolvers.py  kol_resolvers.py  scoring_resolvers.py
apps/api/src/kol_api/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
apps/api/src/kol_api/routers/: __init__.py  auth.py  budget_optimizer.py  campaigns.py  health.py  kols.py  scoring.py  upload.py
apps/api/src/kol_api/services/: __init__.py  brief_parser.py  budget_optimizer.py  enhanced_budget_optimizer.py  export_service.py  kol_matching.py  models.py
apps/api/src/kol_api/services/scoring/: kol_scorer.py
apps/api/src/kol_api/utils/: __init__.py  converters.py  ml_models.py  text_processing.py
apps/api/tests/: conftest.py  test_budget_optimization_algorithms.py  test_budget_optimizer.py  test_constraint_filtering_system.py  test_enhanced_budget_optimizer.py  test_enhanced_services.py  test_graphql_integration.py  test_integration_scoring_workflows.py  test_kol_matching.py  test_kol_scorer.py  test_missing_data.py  test_performance_benchmarks.py  test_scoring_algorithms_validation.py
apps/api/tests/fixtures/: __init__.py  test_data_factory.py
apps/scraper/: Dockerfile  INTEGRATION_IMPLEMENTATION.md  README.md  docker-compose.yml  go.mod  init-db.sql  main.go
apps/scraper/config/: config.example.yaml
apps/scraper/docs/: CIRCUIT_BREAKER.md
apps/scraper/examples/: circuit_breaker_usage.go
apps/scraper/internal/circuit/: breaker.go  breaker_test.go
apps/scraper/internal/database/: README.md  collectors.go  connection.go  models.go  monitor.go  optimization_test.go  optimizations.sql  pool.go  queries.go  retry.go
apps/scraper/internal/errors/: errors.go  errors_test.go  middleware.go
apps/scraper/internal/fastapi/: client.go  client_integration_test.go  client_test.go
apps/scraper/internal/handlers/: data_handlers.go  handlers.go  helpers.go  integration.go  integration_test.go  job_handlers.go
apps/scraper/internal/models/: integration.go  kol.go
apps/scraper/internal/monitoring/: health.go  metrics.go  missing_import.go
apps/scraper/internal/queue/: queue.go  worker.go
apps/scraper/internal/scrapers/: scraper.go  tiktok.go
apps/scraper/pkg/config/: config.go
apps/scraper/pkg/logger/: logger.go
apps/scraper/scripts/: build.sh  start.sh  stop.sh
apps/web/: Dockerfile  GRAPHQL_MIGRATION.md  codegen.ts  next.config.js  package.json
apps/web/public/: sample-campaign-brief.md
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: providers.tsx
apps/web/src/hooks/: useKOLOperations.ts  useKOLs.ts
apps/web/src/lib/: api.ts  apollo.ts  sse.ts  types.ts  utils.ts
apps/web/src/providers/: KOLPlanProvider.tsx
config/environments/: development.yml  production.yml  staging.yml
config/redis/: redis.conf
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: datasource.yml
monitoring/loki/: loki.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
scripts/: deploy-production.sh
ui/: .dockerignore  Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
ui/app/budget/: page.tsx
ui/app/crm/: page.tsx
ui/app/match/: page.tsx
ui/pages/: kols.tsx
(+33 files in other folders)
